# Memslides

./: .dockerignore  .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  docker-compose.private.yml  docker-compose.yml  environment.yml  package.json  pyproject.toml  pytest.ini
.github/workflows/: dockerhub-description.yml
docker/: Dockerfile  README.md
docs/: CONFIGURATION.md  DEMO.md  INSTALL.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: check-pptx-export-runtime.js  local_web_smoke.py
src/memslides/: .tools.json  __init__.py  __main__.py  mcp.json  mcp.json.example  memslides.yaml  session.py
src/memslides/agents/: agent.py  deck_designer.py  env.py  researcher.py  revision_editor.py  template_planner.py
src/memslides/contracts/: __init__.py
src/memslides/experiment/: __init__.py  __main__.py  config.py  induct_template.py  metrics.py  profile_holistic_v6.py  profile_table.py  runner.py  seed.py  tool_memory_table.py  user_model.py
src/memslides/infrastructure/: __init__.py
src/memslides/memory/: __init__.py  cli.py  config_helper.py  debug_tracer.py  experience_writer.py  intent_classifier.py  orchestrator.py  progress.py  style_intent_classifier.py  template_selector.py  user_state_resolver.py  working_memory.py
tests/: test_deck_runtime_anchor_contracts.py  test_deck_runtime_design_plan.py  test_experiment_cli_output.py  test_oss_revision_finalize_recovery.py  test_oss_structured_visual_assets.py  test_profile_holistic_v6.py
(+158 files in other folders)
